<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProductDialog"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_product_content"
        android:scaleType="centerCrop"
        android:src="@drawable/img_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/load"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/ivProductDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProductDialog" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUrl"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginVertical="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            android:inputType="textUri"
            android:textSize="@dimen/size_16" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>